fix(theme): align with latest theme changes

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -3,6 +3,7 @@
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
+@use '@siemens/ix/scss/theme/core/common' as common;
 
 @use './overwrite/doc-sidebar';
 @use './overwrite/navbar';
@@ -27,6 +28,10 @@
 @tailwind utilities;
 
 $font-family: 'Siemens Sans', Arial, Helvetica, sans-serif;
+
+body {
+  @include common.setVars;
+}
 
 #__docusaurus {
   color: var(--theme-color-std-text);
@@ -89,20 +94,18 @@ p {
   --ifm-link-color: var(--theme-color-dynamic);
 }
 
-[data-ix-theme='brand'][data-ix-variant='dark'],
+[data-ix-theme='brand'][data-ix-color-schema='dark'],
 #__docusaurus.theme-classic-dark {
   --ix-docs-hero-background: var(--ifm-background-color);
   --ix-docs-hero-tab-active: var(--ifm-background-color);
 }
 
-[data-ix-theme='brand'][data-ix-variant='light'],
+[data-ix-theme='brand'][data-ix-color-schema='light'],
 #__docusaurus.theme-classic-light {
   --ix-docs-hero-background: var(--ifm-background-color);
   --ix-docs-hero-tab-active: var(--ifm-background-color);
   --ifm-menu-color-active: var(--theme-color-primary);
 }
-
-
 
 .anchor {
   scroll-margin-top: 15rem !important;
